# str-utils

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
benches/: eq_ignore_ascii_case.rs  eq_ignore_ascii_case_multiple.rs  eq_multiple.rs
src/: ends_with_ignore_ascii_case.rs  ends_with_ignore_ascii_case_multiple.rs  ends_with_ignore_case.rs  ends_with_multiple.rs  eq_ignore_ascii_case.rs  eq_ignore_ascii_case_multiple.rs  eq_ignore_case.rs  eq_multiple.rs  escape_characters.rs  is_ascii_lowercased.rs  is_ascii_uppercased.rs  is_lowercased.rs  is_uppercased.rs  lib.rs  pattern.rs  remove_all_invisible_characters.rs  replace.rs  replace_newlines_with_space.rs  starts_with_ignore_ascii_case.rs  starts_with_ignore_ascii_case_multiple.rs  starts_with_ignore_case.rs  starts_with_multiple.rs  to_lowercase.rs  to_uppercase.rs  trim.rs
tests/: cow_into_owned.rs  ends_with_ignore_ascii_case.rs  ends_with_ignore_ascii_case_multiple.rs  ends_with_ignore_case.rs  ends_with_multiple.rs  eq_ignore_ascii_case.rs  eq_ignore_ascii_case_multiple.rs  eq_ignore_case.rs  eq_multiple.rs  escape_characters.rs  is_ascii_lowercased.rs  is_ascii_uppercased.rs  is_lowercased.rs  is_uppercased.rs  remove_all_invisible_characters.rs  replace.rs  replace_newlines_with_space.rs  starts_with_ignore_ascii_case.rs  starts_with_ignore_ascii_case_multiple.rs  starts_with_ignore_case.rs  starts_with_multiple.rs  to_lowercase.rs  to_uppercase.rs  trim.rs
