[package]
name = "str-utils"
version = "0.3.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/magiclen/str-utils"
homepage = "https://magiclen.org/str-utils"
keywords = ["string", "character", "cow", "fluent"]
categories = ["no-std", "text-processing"]
description = "This crate provides some traits to extend `[u8]`, `str` and `Cow<str>`."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "benches/**/*"]

[dependencies]
utf8-width = "0.1"
unicase = { version = "2", optional = true }

[dev-dependencies]
bencher = "0.1.5"
manifest-dir-macros = "0.1.6"

[[bench]]
name = "eq_multiple"
harness = false

[[bench]]
name = "eq_ignore_ascii_case"
harness = false

[[bench]]
name = "eq_ignore_ascii_case_multiple"
harness = false

[features]
default = ["std", "unicase"]
std = ["alloc"]
alloc = []
unicase = ["dep:unicase"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]